# memorials

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .render-buildpacks.json  Procfile  README.md  app.json  db.sqlite3  manage.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: test.yml  tests.yml
core/: admin.py  models.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_auto_20180927_1338.py  0002_auto_20181001_1440.py  0002_monument.py  0003_auto_20180927_1345.py  0003_auto_20181001_1635.py  0003_monument_name.py  0004_auto_20170321_1521.py  0004_auto_20190320_1610.py  0005_auto_20170321_1524.py  0005_auto_20190320_1612.py  0006_auto_20170321_1525.py  0006_auto_20190323_1220.py  0007_auto_20170321_1710.py  0007_location_slug.py  0008_auto_20170321_1718.py  0008_auto_20190323_2005.py  0009_auto_20170321_1738.py  0009_memorial_pretty_name.py  0010_auto_20190323_2043.py  0010_memorialimage.py  0011_auto_20170323_1701.py  0011_auto_20190323_2043.py  0012_auto_20170323_1718.py  0012_auto_20190326_1048.py  0013_auto_20190326_1103.py  0013_memorial_complete.py  0014_auto_20170705_1703.py  0014_auto_20190326_1203.py  0015_auto_20170707_1612.py  0015_memorial_publish.py  0016_auto_20180916_2123.py  0016_auto_20190326_1214.py  0017_auto_20190326_1216.py  0018_auto_20190326_1216.py  0019_auto_20190326_1224.py  0020_auto_20190326_1250.py  0021_memorial_location_detail.py  (+14 more)
memorials/: settings.py  urls.py  wsgi.py
random_primary/: random_primary.py
script/: bootstrap  server  test  update
(+18 files in other folders)
