[tool.poetry]
name = "whitkirk-memorials"
version = "0.1.0"
description = ""
authors = ["St Mary's Church, Whitkirk <hhello@whitkirkchurch.org.uk>"]

[tool.poetry.dependencies]
python = "3.6.10"
Django = "^2.2.13"
django-heroku = "^0.3.1"
gunicorn = "^20.0.4"
pillow = "^7.1.2"
sorl-thumbnail = "^12.6.3"
django-randomslugfield = "^0.3.0"
django-markdownx = "^3.0.1"
django-sass-processor = "^0.8"
django-autoslug = "^1.9.7"
libsass = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
