[tool.poetry]
name = "whitkirk-memorials"
version = "0.1.0"
description = ""
authors = ["St Mary's Church, Whitkirk <hello@whitkirkchurch.org.uk>"]

[tool.poetry.dependencies]
python = "3.9.5"
Django = "^2.2.13"
django-heroku = "^0.3.1"
gunicorn = "^20.0.4"
pillow = "^9.0.1"
sorl-thumbnail = "^12.6.3"
django-randomslugfield = "^0.3.0"
django-markdownx = "^3.0.1"
django-sass-processor = "^0.8"
django-autoslug = "^1.9.7"
libsass = "^0.20.0"
django-compressor = "^2.4"
django-storages = "^1.9.1"
boto3 = "^1.14.9"
psycopg2-binary = "2.8.6"

[tool.poetry.dev-dependencies]
coverage = "^5.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
